--- a/README
+++ b/README
@@ -2,6 +2,7 @@ Q2 Tools
 Haxxoring tools for Samsung YP-Q2 PMP
 
 Q2Crypt - Encrypts/Decrypts the Q2Update.dat files (lame XOR ftw)
+arcExtract - Extract contents from .arc archives used by some Q2 games
 
 The Lemon Man 	(C) 2010
 #hackerchannel 	(c) 2010
